fixed letter-spacing and line-height

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ a {
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
-    letter-spacing: 2%;
+    letter-spacing: 0.02em;
     color: #2e2f42;
 }
 
@@ -168,7 +168,7 @@ a {
 .team-position {
     font-weight: 400;
     font-size: 16px;
-    line-height: 24;
+    line-height: 1.5;
     color: #434455;
     letter-spacing: 0.02em;
 }
@@ -197,7 +197,7 @@ a {
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
-    letter-spacing: 2%;
+    letter-spacing: 0.02em;
     color: #2E2F42;
     
 }
